Edit footer, board UI

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.png"> -->
     <!-- TODO 우리 아이콘 -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>[HappyHouse]</title>
+    <title>HappyHouse</title>
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
   </head>
